# caeroc

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Makefile  Pipfile  README.md  README.rst  pypi.sh  pyproject.toml  setup.py  tox.ini
caeroc/: __init__.py  _version.py
caeroc/formulae/: base.py  duct.py  isentropic.py  shock.py  test.py
caeroc/gui/: __init__.py  base.ui  base_pyqt.py  base_pyside.py  base_pyside2.py  configure  runtime.py
caeroc/profiles/: __init__.py  base.py
caeroc/test/: test_formulae.py
examples/: airfoil.py  caeroc_old_single_file.py  isentropic_table.py  sourcecode.js
src/caeroc/: __init__.py  _skaero  cli.py  logger.py
src/caeroc/_skaero/: constants.py
src/caeroc/_skaero/atmosphere/: __init__.py  coesa.py  util.py
src/caeroc/_skaero/gasdynamics/: __init__.py  isentropic.py  nozzles.py  shocks.py
src/caeroc/_skaero/util/: decorators.py
src/caeroc/formulae/: __init__.py  base.py  duct.py  isentropic.py  shock.py
src/caeroc/gui/: __init__.py  base_pyqt.py  base_pyside2.py  configure  runtime.py
src/caeroc/profiles/: __init__.py  base.py
src/caeroc/util/: decorators.py
tests/: test_formulae.py
