[project]
name = "caeroc"
version = "0.0.3b0"
description = "Compressible aerodynamics calculator in Python"
authors = [
    {name = "Ashwin V. Mohanan", email = "dev@fluid.quest"},
]
dependencies = [
    "matplotlib",
    "numpy",
    "qtpy",
    # "scikit-aero",
    "skaero @ https://github.com/AeroPython/scikit-aero/archive/06958096c04183cde87a7e8a6cd7c016eb9140b3.zip",
    "scipy",
]
requires-python = ">=3.10"
readme = "README.rst"
license = {text = "GPL"}
keywords = ["compressible aerodynamics", "calculator", "gas dynamics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.org/ashwinvis/caeroc"

[project.optional-dependencies]
pyside = [
    "PySide2",
]
pyqt = [
    "PyQt5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
metadata.allow-direct-references = true
