[project]
name = "caeroc"
version = "0.0.4a0"
description = "Compressible aerodynamics calculator in Python"
authors = [{ name = "Ashwin V. Mohanan", email = "dev@fluid.quest" }]
dependencies = [
  "matplotlib>=3.5",
  "numpy >= 1.21",
  "pint>=0.18",
  "qtpy>=2",
  "scipy>=1.8",
  # "scikit-aero",
]
requires-python = ">=3.10"
readme = "README.rst"
license = "GPL"
license-files = ["LICENSE", "src/caeroc/_skaero/COPYING"]
keywords = ["compressible aerodynamics", "calculator", "gas dynamics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  # "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
caeroc-app = "caeroc.cli:caeroc_app"
caeroc-test = "caeroc.cli:caeroc_test"

[project.urls]
Homepage = "https://github.org/ashwinvis/caeroc"

[project.optional-dependencies]
pyside = ["PySide2 >= 5.15"]
pyqt = ["PyQt5 >= 5.15"]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch]
metadata.allow-direct-references = true

[tool.uv.sources]
caeroc = { workspace = true }

[tool.ruff.lint]
select = ["E", "I", "UP", "NPY"]
ignore = ["E501"]

[dependency-groups]
dev = [
  "skaero @ https://github.com/AeroPython/scikit-aero/archive/06958096c04183cde87a7e8a6cd7c016eb9140b3.zip",
]
